--- a/transition_animation/css/main.css
+++ b/transition_animation/css/main.css
@@ -4,6 +4,8 @@ main {
 }
 
 article {
+  padding-left: 2rem;
+  padding-right: 2rem;
   min-height: 30rem;
   max-width: 30rem;
   border: 1px solid #000;
@@ -13,6 +15,8 @@ article {
   background-size: cover;
   background-image: linear-gradient(to right, #ff63473f, #ff63473f),
     url('../img/pic01.jpg');
+
+  transition: transform 0.5s;
 }
 
 .article-inner {
@@ -21,5 +25,23 @@ article {
 
 h2 {
   font-size: 2.5rem;
-  margin-bottom: 0.3rm;
+  margin-bottom: 0.3em;
+}
+/* textas neuzvedus pelyte */
+.text {
+  /* display: none; */
+  opacity: 0;
+  transition: opacity 0.7s, transform 0.4s;
+  /* pastumia zemyn */
+  transform: translateY(100px);
+}
+/* kai uzvedam peyte and article, rodom jo viduje esanti .text elementa */
+article:hover .text {
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+article:hover {
+  transform: scale(1.2);
 }
