--- a/transition_animation/css/main.css
+++ b/transition_animation/css/main.css
@@ -31,13 +31,15 @@ h2 {
 .text {
   /* display: none; */
   opacity: 0;
-  transition: opacity 0.7s, transform 0.4s;
   /* pastumia zemyn */
   transform: translateY(100px);
+  transition: opacity 0.7s, transform 0.4s;
+  transition-delay: 0.2s;
 }
 
 .title {
   transform: translateY(1em);
+  transition: transform 0.2s;
 }
 
 /* kai uzvedam peyte and article, rodom jo viduje esanti .text elementa */
@@ -48,6 +50,10 @@ article:hover .text {
 }
 
 /* parasyti taisykle kad uzvedus pelyte ant article, viduje esantis title sugryztu i savo vieta (transform: translateY(0)) */
+
+article:hover .title {
+  transform: translateY(0);
+}
 
 article:hover {
   transform: scale(1.2);
